# ontario-environmental-data

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMPREHENSIVE_DATA_REQUIREMENTS_ANALYSIS.md  LICENSE  README.md  check_data_status.py  clip_williams_treaty_data.py  collect_all_data.py  collect_data.py  diagnose_data_sources.py  discover_portals.py  generate_williams_treaty_data.py  pyproject.toml  satellite_data_registry.json  setup_s3_bucket.sh  test_all_clients.py  upload_local_data.sh
.github/workflows/: README.md  ci.yml  collect-and-upload-to-s3.yml  data-collection.yml  data-validation.yml  publish-data-to-pages.yml  publish-from-s3.yml  regenerate-catalog.yml  satellite-processing.yml  upload-local-data.yml
data/processed/boundaries/: williams_treaty.geojson
data/raw/: CWB_2021.csv
docs/: S3_STORAGE_GUIDE.md  SATELLITE_DATA_EC2.md  SATELLITE_DATA_GUIDE.md  STATIC_DATASETS.md
examples/: fetch_biodiversity_data.py
ontario_data/: __init__.py  config.py  datasets.py  validation.py
ontario_data/constants/: __init__.py  data_sources.py  regions.py
ontario_data/models/: __init__.py  biodiversity.py  community.py  fire.py  health.py  indigenous.py  protected_areas.py
ontario_data/sources/: __init__.py  base.py  biodiversity.py  boundaries.py  community.py  fire.py  health.py  indigenous.py  portal_harvester.py  protected_areas.py  satellite.py  storage.py
ontario_data/utils/: __init__.py  geometry.py
scripts/: collect_ochpp_health_data.py  convert_to_cog.py  convert_to_pmtiles.py  create_ndvi_composite.py  create_styled_tilesets.py  launch_cog_conversion.sh  launch_landcover_timeseries.sh  launch_pmtiles_conversion.sh  launch_satellite_processing.sh  process_landcover_timeseries.py  process_satellite_data.py  process_satellite_data_ec2.py  upload_raster_to_mapbox.py
tests/: __init__.py  conftest.py  test_config.py  test_fire.py  test_geometry.py  test_indigenous.py  test_integration_real_apis.py  test_models.py  test_protected_areas.py
