[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontario-environmental-data"
version = "0.2.0"
description = "Python library for accessing Ontario-specific environmental and biodiversity data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Robert Soden", email = "robertsoden@users.noreply.github.com"}
]
maintainers = [
    {name = "Robert Soden", email = "robertsoden@users.noreply.github.com"}
]
keywords = [
    "ontario",
    "environmental-data",
    "biodiversity",
    "conservation",
    "api-client",
    "inaturalist",
    "ebird",
    "water-quality"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
raster = [
    "rasterio>=1.3.0",
    "xarray>=2023.0.0",
    "pystac-client>=0.7.0",
    "planetary-computer>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/robertsoden/ontario-environmental-data"
Documentation = "https://github.com/robertsoden/ontario-environmental-data#readme"
Repository = "https://github.com/robertsoden/ontario-environmental-data"
Issues = "https://github.com/robertsoden/ontario-environmental-data/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ontario_data*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
asyncio_mode = "auto"
